--- a/app.css
+++ b/app.css
@@ -1482,3 +1482,136 @@ display:none!important;
 }
 */
     
+
+
+/*
+================================================================================
+SELECT LOKACIJE IZGLED PADAJUĆIH SELECT BIG TEKSTOVA
+================================================================================
+*/
+
+
+/*
+body {
+  color: #231f20;
+  background-color: #ffdc52;
+}
+
+*/.placeholder {
+  border-bottom: 2px solid;
+  cursor: pointer;  
+}
+
+.list {
+  display: inline-block;
+  position: relative;
+ /* margin-left: 6px;*/
+}
+
+.select-hidden {
+  display: none;
+  visibility: hidden;
+  padding-right: 10px;
+}
+
+.select {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  font-size: 96px;
+  color: #231f20;
+  width: 800px;
+  height: 100px;
+}
+
+.select-styled {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  padding: 8px 15px;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.select-styled:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border: 7px solid transparent;
+  border-color: #231f20 transparent transparent transparent;
+  position: absolute;
+  top: 60px;
+  right: 10px;
+}
+/*
+.select-styled:hover {
+  background-color: transparent;
+}
+
+.select-styled:active, .select-styled.active {
+  background-color: transparent;
+}
+*/
+.select-styled:active:after, .select-styled.active:after {
+  top: 60px;
+  border-color: transparent transparent #231f20 transparent;
+}
+
+.select-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: transparent;
+}
+.select-options li {
+  display: inline-block;
+  margin: 0;
+  padding: 12px 0;
+  text-indent: 0px;
+  /* border-top: 1px solid darken($select-background, 10);*/
+  -moz-transition: all 0.15s ease-in;
+  -o-transition: all 0.15s ease-in;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in;
+}
+
+.select-options li {
+  transition: all 0.4s;
+ /* color: #7b00ff;*/
+  position: relative;
+}
+.select-options li:after {
+  position: absolute;
+  content: "";
+  height: 5px;
+  width: 0;
+  left: 0;
+  color: #ff0000;
+  background: #b066ff;
+  bottom: 0;
+  transition: all 0.4s ease-out;
+}
+.select-options li:hover {
+  cursor: pointer;
+  color: #b066ff;
+}
+.select-options li:hover:after {
+  width: 100%;
+}
+
+.select-options li[rel="hide"] {
+  display: none;
+}
+
+
+
