--- a/app.css
+++ b/app.css
@@ -1518,7 +1518,7 @@ body {
   cursor: pointer;
   display: inline-block;
   position: relative;
-  font-size: 36px;
+  font-size: 3em;
   color: #231f20;
   width: 300px;
   height: 40px;
