--- a/app.css
+++ b/app.css
@@ -1518,9 +1518,9 @@ body {
   cursor: pointer;
   display: inline-block;
   position: relative;
-  font-size: 3em;
+  font-size: 5.1;
   color: #231f20;
-  width: 300px;
+  width: 500px;
   height: 40px;
 }
 
