--- a/app.css
+++ b/app.css
@@ -1531,7 +1531,7 @@ body {
   bottom: 0;
   left: 0;
   background-color: transparent;
-  padding: 8px 15px;
+  /* padding: 8px 15px; */
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   -webkit-transition: all 0.2s ease-in;
