--- a/app.css
+++ b/app.css
@@ -1516,7 +1516,7 @@ body {
 
 .select {
   cursor: pointer;
-  display: inline-block;
+ /*  display: inline-block; */
   position: relative;
   font-size: 5.1;
   color: #231f20;
