--- a/app.css
+++ b/app.css
@@ -1518,7 +1518,7 @@ body {
   cursor: pointer;
  /*  display: inline-block; */
   position: relative;
-  font-size: 5.1;
+  font-size: 5.1em;
   color: #231f20;
   width: 500px;
   height: 40px;
