--- a/app.css
+++ b/app.css
@@ -1520,8 +1520,8 @@ body {
   position: relative;
   /* font-size: 5.1em; */
   color: #231f20;
-  width: 800px;
-  height: 40px;
+  width: 100%;
+ /*  height: 40px; */
 }
 
 .select-styled {
