--- a/app.css
+++ b/app.css
@@ -1518,7 +1518,7 @@ body {
   cursor: pointer;
  /*  display: inline-block; */
   position: relative;
-  font-size: 5.1em;
+  font-size: 5.1rem;
   color: #231f20;
   width: 100%;
  /*  height: 40px; */
