--- a/app.css
+++ b/app.css
@@ -1518,7 +1518,7 @@ body {
   cursor: pointer;
  /*  display: inline-block; */
   position: relative;
-  font-size: 5.1rem;
+  font-size: 5.1em;
   color: #231f20;
   width: 100%;
  /*  height: 40px; */
@@ -1544,8 +1544,8 @@ body {
   border: 7px solid transparent;
   border-color: #231f20 transparent transparent transparent;
   position: absolute;
-  top: 3.13em;
- /*  right: 10px; */
+  top: 60px;
+  /* right: 10px; */
 }
 /*
 .select-styled:hover {
@@ -1571,7 +1571,7 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  background-color: #FFDC52;
+  background-color: transparent;
 }
 .select-options li {
   /* display: inline-block; */
