--- a/app.css
+++ b/app.css
@@ -1520,8 +1520,8 @@ body {
   position: relative;
   font-size: 3.1rem;
   color: #231f20;
-  width: 100%;
- /*  height: 40px; */
+  width: 20em;
+  height: 2.08em; 
 }
 
 .select-styled {
