--- a/app.css
+++ b/app.css
@@ -1697,7 +1697,7 @@ body {
 
 /*NNOOVVO*/
 
-
+/*
 .selectField {
   position: relative;
   -webkit-user-select: none;
@@ -1777,3 +1777,5 @@ body {
   color: rgba(0, 0, 0, 0.5);
   cursor: default;
 }
+
+*/
