--- a/vendor.css
+++ b/vendor.css
@@ -173,7 +173,7 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-    color: #444;
+    color: #ffdc52;
     line-height: 28px
 }
 
