--- a/vendor.css
+++ b/vendor.css
@@ -474,7 +474,7 @@
 }
 
 .select2-container--classic.select2-container--open .select2-selection--single {
-    border: 1px solid #5897fb
+    border: 1px solid #ffdc52
 }
 
 .select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow {
