--- a/vendor.css
+++ b/vendor.css
@@ -336,7 +336,7 @@
 }
 
 .select2-container--default .select2-results>.select2-results__options {
-    max-height: 200px;
+    /* max-height: 200px; */
     overflow-y: auto
 }
 
@@ -474,7 +474,7 @@
 }
 
 .select2-container--classic.select2-container--open .select2-selection--single {
-    border: 1px solid #ffdc52
+    border: 1px solid #5897fb
 }
 
 .select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow {
