--- a/vendor.css
+++ b/vendor.css
@@ -397,7 +397,7 @@
 }
 
 .select2-container--classic .select2-selection--single {
-    background-color: #f7f7f7;
+    background-color: #ffdc52;
     border: 1px solid #aaa;
     border-radius: 4px;
     outline: 0;
