--- a/vendor.css
+++ b/vendor.css
@@ -188,11 +188,11 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: 26px;
+    height: 2.5em;
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 20px
+    width: 2.5em
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
