--- a/vendor.css
+++ b/vendor.css
@@ -19,7 +19,7 @@
 
 .select2-container .select2-selection--single .select2-selection__rendered {
     display: block;
-    padding-left: 8px;
+    padding-left: 1em;
     padding-right: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
