--- a/vendor.css
+++ b/vendor.css
@@ -1,7 +1,7 @@
 /*select2.min.css*/
 .select2-container {
     box-sizing: border-box;
-    /* width: 268px; */
+   width: 300px!important;
     display: inline-block;
     margin: 0;
     position: relative;
