--- a/app.css
+++ b/app.css
@@ -1598,7 +1598,7 @@ display:none!important;
 .link_container.is--submit.disable {pointer-events: none;}
 
 
-/* 
+
 @media only screen and (min-width: 1440px) {
   body {font-size: 14px;}
   }
@@ -1606,7 +1606,7 @@ display:none!important;
   a {
     color: inherit;
   } */
- /*  
+ 
   .cursor {
     pointer-events: none;
   }
@@ -1617,11 +1617,11 @@ display:none!important;
   }
   .cursor.link-hover .cursor_dot {
     background-color: white;
-  } */
+  } 
   
- /*  body:hover .cursor {
+  body:hover .cursor {
     opacity: 1.0;
-  } */
+  } 
   .linkos {
     -webkit-mask-image: -webkit-radial-gradient(white, black);
   }
