--- a/vendor.css
+++ b/vendor.css
@@ -70,7 +70,7 @@
 
 .select2-dropdown {
     background-color: #ffdc52;
-    border: 0px solid #aaa;
+    border: 2px solid #231f20;
     border-radius: 0.5px;
     box-sizing: border-box;
     display: block;
