--- a/vendor.css
+++ b/vendor.css
@@ -19,7 +19,9 @@
 
 .select2-container .select2-selection--single .select2-selection__rendered {
     display: block;
-    padding-left: 1em;
+    padding-top: 1.25em;
+    padding-left: 1.25em;
+    padding-bottom: 1.25em;
     padding-right: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
