--- a/vendor.css
+++ b/vendor.css
@@ -21,7 +21,7 @@
     display: block;
     padding-top: 0.45em;
     padding-left: 1.25em;
-    padding-bottom: 1.25em;
+   /*  padding-bottom: 1.25em; */
     padding-right: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
