--- a/vendor.css
+++ b/vendor.css
@@ -19,10 +19,11 @@
 
 .select2-container .select2-selection--single .select2-selection__rendered {
     display: block;
-    padding-top: 0.45em;
+    padding: 1.25em;
+  /*   padding-top: 0.45em;
     padding-left: 1.25em;
-   /*  padding-bottom: 1.25em; */
-    padding-right: 20px;
+   /*  padding-bottom: 1.25em; */ 
+    /* padding-right: 20px; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap
@@ -93,9 +94,9 @@
 }
 
 .select2-results__option {
-   /*  padding: 1.25em; */
-    padding-top: 0.45em;
-    padding-left: 1.25em;
+    padding: 1.25em; 
+  /*   padding-top: 0.45em;
+    padding-left: 1.25em; */
     user-select: none;
     -webkit-user-select: none
 }
