--- a/vendor.css
+++ b/vendor.css
@@ -198,7 +198,7 @@
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 2.5em
+    width: 2.5em;
 
     background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
     background-size: 12px;
