--- a/vendor.css
+++ b/vendor.css
@@ -194,13 +194,16 @@
 .select2-container--default .select2-selection--single .select2-selection__arrow {
 
 
-    height: 2.5em;
+    /* height: 2.5em; */
     position: absolute;
     top: 1px;
     right: 1px;
     width: 2.5em;
 
-    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+  /*   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat; */
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='9' viewBox='0 0 16 9' fill='none'><path fill-rule='evenodd' clip-rule='evenodd' d='M8.2123 8.84967L8.21335 8.85064L8.22693 8.83606L15.7723 1.81476L14.4779 0.423828L8.2123 6.25429L1.94668 0.423828L0.652344 1.81476L8.19768 8.83606L8.21125 8.85064L8.2123 8.84967Z' fill='#FFDC52'/></svg>") no-repeat;
+    
+
     background-size: 12px;
     background-position: calc(100% - 60px) center;
     background-repeat: no-repeat;
