--- a/vendor.css
+++ b/vendor.css
@@ -211,7 +211,8 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: #888 transparent transparent transparent;
+    background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
+   /*  border-color: #888 transparent transparent transparent; */
     border-style: solid;
     border-width: 5px 4px 0 4px;
     height: 0;
