--- a/vendor.css
+++ b/vendor.css
@@ -203,12 +203,10 @@
 
   /*   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat; */
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
-    
-
-    background-size: 12px;
-    background-position: calc(100% - 60px) center;
+    background-size: 20px;
+    background-position: calc(100% - 20px) center;
     background-repeat: no-repeat;
-    background-color: #efefef;
+    /* background-color: #efefef; */
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
