--- a/vendor.css
+++ b/vendor.css
@@ -210,7 +210,10 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
-    background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
+    background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c712f5640a9b37a36b19ea_arrow_up.svg") no-repeat;
+    background-size: 20px;
+    background-position: calc(100% - 20px) center;
+    background-repeat: no-repeat;
    /*  border-color: #888 transparent transparent transparent; */
     border-style: solid;
     border-width: 5px 4px 0 4px;
