--- a/vendor.css
+++ b/vendor.css
@@ -210,12 +210,17 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    width: 2.5em;
+    height: 100%;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c712f5640a9b37a36b19ea_arrow_up.svg") no-repeat;
     background-size: 20px;
     background-position: calc(100% - 20px) center;
     background-repeat: no-repeat;
    /*  border-color: #888 transparent transparent transparent; */
-    border-style: solid;
+    /* border-style: solid;
     border-width: 5px 4px 0 4px;
     height: 0;
     left: 50%;
@@ -223,7 +228,7 @@
     margin-top: -2px;
     position: absolute;
     top: 50%;
-    width: 0
+    width: 0 */
 }
 
 .select2-container--default[dir="rtl"] .select2-selection--single .select2-selection__clear {
