--- a/vendor.css
+++ b/vendor.css
@@ -202,7 +202,7 @@
     height: 100%;
 
   /*   background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat; */
-    background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
+    /* background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat; */
     /* background-size: 20px; */
     background-position: calc(100% - 10px) center;
     background-repeat: no-repeat;
