--- a/vendor.css
+++ b/vendor.css
@@ -216,7 +216,7 @@
     width: 3em;
     height: 100%;
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c712f5640a9b37a36b19ea_arrow_up.svg") no-repeat;
-    /* background-size: 20px; */
+     background-size: 0.79em; 
     background-position: calc(100% - 10px) center;
     background-repeat: no-repeat;
    /*  border-color: #888 transparent transparent transparent; */
