--- a/vendor.css
+++ b/vendor.css
@@ -21,10 +21,9 @@
     display: block;
     padding-top: 1.04em;
     padding-bottom: 1.04em; 
-  /*   padding-top: 0.45em;
     padding-left: 1.25em;
-   /*  padding-bottom: 1.25em; */ 
-    /* padding-right: 20px; */
+   padding-bottom: 1.25em; 
+   padding-right: 20px; 
     overflow: hidden;
     white-space: nowrap
 }
