--- a/vendor.css
+++ b/vendor.css
@@ -93,7 +93,11 @@
 }
 
 .select2-results__option {
-    padding: 1.25em; 
+    padding-top: 0.5em;
+    padding-bottom: 1.04em; 
+    padding-left: 0.8em;
+   padding-bottom: 1.25em; 
+   padding-right: 20px; 
   /*   padding-top: 0.45em;
     padding-left: 1.25em; */
     user-select: none;
