--- a/vendor.css
+++ b/vendor.css
@@ -23,7 +23,7 @@
     padding-bottom: 1.04em; 
     padding-left: 0.8em;
    padding-bottom: 1.25em; 
-   padding-right: 20px; 
+   padding-right: 1.04em; 
     overflow: hidden;
     white-space: nowrap
 }
@@ -33,15 +33,15 @@
 }
 
 .select2-container[dir="rtl"] .select2-selection--single .select2-selection__rendered {
-    padding-right: 8px;
-    padding-left: 20px
+    padding-right: 0.42em;
+    padding-left: 21.04em
 }
 
 .select2-container .select2-selection--multiple {
     box-sizing: border-box;
     cursor: pointer;
     display: block;
-    min-height: 32px;
+    min-height: 1.67em;
     user-select: none;
     -webkit-user-select: none
 }
@@ -49,7 +49,7 @@
 .select2-container .select2-selection--multiple .select2-selection__rendered {
     display: inline-block;
     overflow: hidden;
-    padding-left: 8px;
+    padding-left: 0.42em;
     text-overflow: ellipsis;
     white-space: nowrap
 }
@@ -62,7 +62,7 @@
     box-sizing: border-box;
     border: none;
     font-size: 100%;
-    margin-top: 5px;
+    margin-top: 0.26em;
     padding: 0
 }
 
@@ -96,7 +96,7 @@
     padding-top: 0.5em;
     padding-left: 0.8em;
    padding-bottom: 0.6em; 
-   padding-right: 20px; 
+   padding-right: 1.04em; 
   /*   padding-top: 0.45em;
     padding-left: 1.25em; */
     user-select: none;
@@ -122,7 +122,7 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0
 }
-
+/*
 .select2-search--dropdown {
     display: block;
     padding: 4px
@@ -141,7 +141,7 @@
 .select2-search--dropdown.select2-search--hide {
     display: none
 }
-
+*/
 .select2-close-mask {
     border: 0;
     margin: 0;
@@ -181,7 +181,7 @@
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: #ffdc52;
-    line-height: 28px
+   /*  line-height: 28px */
 }
 
 .select2-container--default .select2-selection--single .select2-selection__clear {
@@ -191,7 +191,7 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder {
-    color: #999
+    color: #231f20
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
@@ -215,7 +215,7 @@
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
     position: absolute;
     /* top: -3px; */
-    right: 3px;
+    right: 0.16em;
     width: 2.5em;
     height: 100%;
     border-left-style: solid;
@@ -259,7 +259,7 @@
     background: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60c7101c907ce3e5f5b7cdad_arrow_down.svg") no-repeat;
     /* border-color: transparent transparent #888 transparent; */
     position: absolute;
-    right: 3px;
+    right: 0.16em;
     width: 2.5em;
     height: 100%;
     border-left-style: solid;
@@ -267,14 +267,14 @@
     border-left-color: #F4DD54;
     background-size: 0.79em; 
     height: 100%;
-    background-position: calc(100% - 10px) center;
+    background-position: calc(100% - 0.52em) center;
     background-repeat: no-repeat;
 }
 
 .select2-container--default .select2-selection--multiple {
     background-color: #ffdc52;
-    border: 1px solid #aaa;
-    border-radius: 4px;
+    border: 0px solid #aaa;
+    border-radius: 0.5;
     cursor: text
 }
 
@@ -282,7 +282,7 @@
     box-sizing: border-box;
     list-style: none;
     margin: 0;
-    padding: 0 5px;
+    padding: 0 0.26em;
     width: 100%
 }
 
@@ -294,22 +294,22 @@
     cursor: pointer;
     float: right;
     font-weight: bold;
-    margin-top: 5px;
-    margin-right: 10px;
+    margin-top: 0.26em;
+    margin-right: 0.52em;
     padding: 1px
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
     background-color: #e4e4e4;
-    border: 1px solid #aaa;
-    border-radius: 4px;
+    border: 0px solid #aaa;
+    border-radius: 0.5px;
     cursor: default;
     float: left;
-    margin-right: 5px;
-    margin-top: 5px;
-    padding: 0 5px
+    margin-right: 0.26em;
+    margin-top: 0.26em;
+    padding: 0 0.26em
 }
-
+/*
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     color: #999;
     cursor: pointer;
@@ -321,7 +321,8 @@
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
     color: #333
 }
-
+*/
+/*
 .select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
 .select2-container--default[dir="rtl"] .select2-selection--multiple .select2-search--inline {
     float: right
@@ -346,7 +347,7 @@
     background-color: #eee;
     cursor: default
 }
-
+*/
 .select2-container--default.select2-container--disabled .select2-selection__choice__remove {
     display: none
 }
@@ -364,7 +365,7 @@
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
-    border: 1px solid #aaa
+    border: 0px solid #aaa
 }
 
 .select2-container--default .select2-search--inline .select2-search__field {
@@ -429,13 +430,13 @@
     background-color: #231f20;
     color: #ffdc52
 }
-
+/*
 .select2-container--default .select2-results__group {
     cursor: default;
     display: block;
     padding: 6px
 }
-
+*/
 .select2-container--classic .select2-selection--single {
     background-color: #ffdc52;
     border: 1px solid #aaa;
@@ -467,7 +468,7 @@
 .select2-container--classic .select2-selection--single .select2-selection__placeholder {
     color: #999
 }
-
+/*
 .select2-container--classic .select2-selection--single .select2-selection__arrow {
     background-color: #ddd;
     border: none;
@@ -498,7 +499,7 @@
     top: 50%;
     width: 0
 }
-
+*/
 .select2-container--classic[dir="rtl"] .select2-selection--single .select2-selection__clear {
     float: left
 }
@@ -512,11 +513,11 @@
     left: 1px;
     right: auto
 }
-
+/*
 .select2-container--classic.select2-container--open .select2-selection--single {
     border: 0px solid #5897fb
 }
-
+*/
 .select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow {
     background: transparent;
     border: none
@@ -570,7 +571,7 @@
 .select2-container--classic .select2-selection--multiple .select2-selection__clear {
     display: none
 }
-
+/*
 .select2-container--classic .select2-selection--multiple .select2-selection__choice {
     background-color: #ffdc52;
     border: 0px solid #aaa;
@@ -630,7 +631,7 @@
     outline: 0;
     box-shadow: none
 }
-
+*/
 .select2-container--classic .select2-dropdown {
     background-color: #ffdc52;
     border: 1px solid transparent
