--- a/app.css
+++ b/app.css
@@ -1617,9 +1617,9 @@ display:none!important;
     background-color: white;
   } 
   
-  body:hover .cursor {
+ /*  body:hover .cursor {
     opacity: 1.0;
-  } 
+  }  */
   .linkos {
     -webkit-mask-image: -webkit-radial-gradient(white, black);
   }
