--- a/app.css
+++ b/app.css
@@ -581,10 +581,10 @@ cursor: pointer;
 LOCOMOTIVE FIX
 ================================================================================
 */
-/* .smooth-scroll {
+.smooth-scroll {
   overflow-y: hidden !important;
 }
- */
+
 
 
   /*
