--- a/vendor.css
+++ b/vendor.css
@@ -176,6 +176,7 @@
 
 .select2-container--default .select2-selection--single {
     background-color: #231f20;
+    margin-top: 0.9em;
     /* border: 1px solid #aaa; */
     border-radius: 0.5px
 }
