--- a/app.css
+++ b/app.css
@@ -581,9 +581,9 @@ cursor: pointer;
 LOCOMOTIVE FIX
 ================================================================================
 */
-.smooth-scroll {
+/* .smooth-scroll {
   overflow-y: hidden !important;
-}
+} */
 
 
 
