--- a/vendor.css
+++ b/vendor.css
@@ -269,7 +269,7 @@
     border-left-color: #F4DD54;
     background-size: 0.79em; 
     height: 100%;
-    background-position: calc(100% - 0.52em) center;
+    background-position: 1.17em 2em;
     background-repeat: no-repeat;
 }
 
