--- a/app.css
+++ b/app.css
@@ -1633,6 +1633,7 @@ display:none!important;
   .active .link_circle {
     border-radius: 0%;
     margin-bottom: -3em;
+    background-color: #ff0000;
   }
   
   .field {
